# network-monitor

./: .gitignore  README.md  config.yaml  pyproject.toml
netsentinel/: __init__.py  config.py  main.py
netsentinel/api/: routes.py  schemas.py  server.py  websocket.py
netsentinel/cli/: app.py  commands.py  dashboard.py
netsentinel/core/: db.py  events.py  fingerprint.py  models.py  scanner.py  vendor.py
netsentinel/webui/static/: index.html
